edits in the mobile version and added images to the tablet version

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -6,7 +6,7 @@
              <li class="product-list__item card-1">
                 <h3 class="product-list__title">ice cream</h3>
                 <div class="product-list__dots">
-                    <span class="product-list__dot"></span>
+                    <!-- <span class="product-list__dot"></span> -->
                 </div>
                 <p class="product-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
                 aliqua facilisis.</p>
