--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -37,10 +37,11 @@
   margin-bottom: 130px;
   width: 100%;
   // width: 280px;
-  height: 485px;
+  // height: 485px;
   border-radius: 24px;
-  padding-top: 161px;
-  padding-bottom: 20px;
+  // padding-top: 161px;
+  // padding-bottom: 40px;
+  padding: 161px 39px 41px 41px;
   &:last-child {
     margin-bottom: 0px;
   }
@@ -60,7 +61,7 @@
   @media screen and (min-width: $tablet) {
     margin-right: 20px;
     margin-bottom: 0px;
-    padding-top: 152px;
+    padding: 152px 11px 40px 11px;
     &::before {
       width: 220px;
       height: 233px;
@@ -77,6 +78,18 @@
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: url(../images/mobile/m-prod-cream@2x.png);
     }
+    @media screen and (min-width: $tablet) {
+      background-image: url(../images/tablet/t-prod-cream@1x.png);
+      @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+        background-image: url(../images/tablet/t-prod-cream@2x.png);
+      }
+    }
+    // @media screen and (min-width: $desktop) {
+    //   background-image: url(../images/desktop/d-prod-cream@1x.png);
+    //   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    //     background-image: url(../images/desktop/d-prod-cream@2x.png);
+    //   }
+    // }
   }
 }
 
@@ -87,6 +100,18 @@
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: url(../images/mobile/m-prod-coffee@2x.png);
     }
+    @media screen and (min-width: $tablet) {
+      background-image: url(../images/tablet/t-prod-coffee@1x.png);
+      @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+        background-image: url(../images/tablet/t-prod-coffee@2x.png);
+      }
+    }
+    // @media screen and (min-width: $desktop) {
+    //   background-image: url(../images/desktop/d-prod-coffee@1x.png);
+    //   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    //     background-image: url(../images/desktop/d-prod-coffee@2x.png);
+    //   }
+    // }
   }
 }
 
@@ -97,11 +122,24 @@
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: url(../images/mobile/m-prod-shake@2x.png);
     }
+    @media screen and (min-width: $tablet) {
+      background-image: url(../images/tablet/t-prod-shake@1x.png);
+      @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+        background-image: url(../images/tablet/t-prod-shake@2x.png);
+      }
+    }
+    // @media screen and (min-width: $desktop) {
+    //   background-image: url(../images/desktop/d-prod-shake@1x.png);
+    //   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    //     background-image: url(../images/desktop/d-prod-shake@2x.png);
+    //   }
+    // }
   }
 }
 
 .product-list__title {
-  margin-bottom: 30px;
+  position: relative;
+  margin-bottom: 66px;
   font-family: Titan One;
   font-weight: 400;
   font-size: 20px;
@@ -112,7 +150,7 @@
 }
 
 .product-list__text {
-  padding: 0 40px;
+  // padding: 0 40px;
   margin-bottom: 30px;
   font-weight: 700;
   line-height: calc(21 / 14);
@@ -120,8 +158,8 @@
   color: $text-two;
   @media screen and (min-width: $tablet) {
     line-height: calc(25 / 14);
-    padding-left: 11px;
-    padding-right: 11px;
+    // padding-left: 11px;
+    // padding-right: 11px;
     margin-bottom: 40px;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -133,6 +171,9 @@
 
 .overlay__text {
   overflow: scroll;
+  @media screen and (min-width: $tablet) {
+    display: block;
+  }
 }
 
 .overlay.is-hidden {
@@ -144,12 +185,15 @@
   bottom: 35px;
   left: 0;
   height: 295px;
+  padding: 0 40px;
   border-radius: 24px;
   overflow: scroll;
   z-index: 1;
   transform: rotate3d(0, 1, 0, 360deg);
   transition: transform $switch;
-  // transition: opacity $switch, visibility $switch;
+  @media screen and (min-width: $tablet) {
+    padding: 0 11px;
+  }
 }
 
 .overlay--a {
@@ -189,17 +233,58 @@
   margin: 0 auto;
 }
 
-.product-list__dot {
-  display: block;
+// .product-list__dot {
+//   display: block;
+//   width: 6px;
+//   height: 6px;
+//   border-radius: 50%;
+//   background-color: $bg-one;
+// }
+
+// .product-list__dots::before {
+//   content: '';
+//   display: block;
+//   width: 6px;
+//   height: 6px;
+//   border-radius: 50%;
+//   background-color: $bg-one;
+// }
+
+// .product-list__dots::after {
+//   content: '';
+//   display: block;
+//   width: 6px;
+//   height: 6px;
+//   border-radius: 50%;
+//   background-color: $bg-one;
+// }
+
+// .product-list__dots {
+//   display: flex;
+//   width: 26px;
+//   justify-content: space-between;
+//   margin: 0 auto;
+//   margin-bottom: 30px;
+// }
+
+.product-list__title::after {
+  position: absolute;
+  left: 106px;
+  bottom: -30px;
+  content: '';
+  // display: flex;
   width: 6px;
   height: 6px;
   border-radius: 50%;
   background-color: $bg-one;
 }
 
-.product-list__dots::before {
+.product-list__title::before {
+  position: absolute;
+  left: 86px;
+  bottom: -30px;
   content: '';
-  display: block;
+  // display: flex;
   width: 6px;
   height: 6px;
   border-radius: 50%;
@@ -208,17 +293,16 @@
 
 .product-list__dots::after {
   content: '';
-  display: block;
+  position: absolute;
+  left: 137px;
+  top: 208px;
+  // display: block;
   width: 6px;
   height: 6px;
   border-radius: 50%;
   background-color: $bg-one;
-}
-
-.product-list__dots {
-  display: flex;
-  width: 26px;
-  justify-content: space-between;
-  margin: 0 auto;
-  margin-bottom: 30px;
+  @media screen and (min-width: $tablet) {
+    left: 107px;
+    top: 199px;
+  }
 }
