feature/about-modal

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -41,7 +41,7 @@
                     </li>
                 </ul>
             
-                <button class="description__button">
+                <button class="description__button" data-modal-about-open>
                     Read more
                     <img class="about-button__arrow" src="./images/common/vector_2.png" alt="arrow">
                 </button>
