--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -33,36 +33,42 @@
 
 
 <!-- <h1>Hows made? -->
-<div class="backdrop is-hidden">
-    <div class="modal">
-        <button type="button" class="modal-btn-close" >
-             <svg class="read-more__close-icon" width="18" height="18">
+<div class="backdrop backdrop--is-hidden" data-modal-about>
+    <div class="modal modal--about">
+        <button type="button" class="modal__btn--close modal__btn--about" data-modal-about-close>
+            <svg width="18" height="18">
                 <use href="./images/sprite.svg#close"></use>
             </svg>
         </button>
-        <h2 class="modal__title title">How it’s made?</h2>
-        <div class="discription">
-             <ul class="discription__list list">
-                 <li class="discription__item">
-                    <p class="discription__text">
-                        Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.
-                    </p>
-                </li>
-                <li class="discription__item">
-                    <p class="discription__text text2">
-                        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat.Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-                    </p>
-                 </li>
-                <li class="discription__item">
-                    <p class="discription__text text2">
-                        Aliquam erat volutpat. Aenean accumsan. Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
-                        placerat.Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-                    </p>
-                </li>
-            </ul>
-                
-            </div>
+        <h3 class="modal__title modal__title--about">Let us tell you a story about <span>IceCream</span></h3>
+        <div class="modal__descr--about">
+            <p>
+               Our love affair with ice cream is centuries old. The ancient Greeks, Romans, and Jews were known to chill wines and
+            juices. This practice evolved into fruit ices and, eventually, frozen milk and cream mixtures. In the first century,
+            Emperor Nero reportedly sent messengers to the mountains to collect snow so that his kitchen staff could make
+            concoctions flavored with fruit and honey. Twelve centuries later, Marco Polo introduced Europe to a frozen milk dessert
+            similar to the modern sherbet that he had enjoyed in the Far East. The Italians were especially fond of the frozen
+            confection that by the sixteenth century was being called ice cream. In 1533, the young Italian princess Catherine de
+            Medici went to France as the bride of the future King Henry II. Included in her trousseau were recipes for frozen
+            desserts. The first public sale of ice cream occurred in Paris at the Café Procope in 1670. 
+            </p>
+
+            <p>Frozen desserts were also popular in England. Guests at the coronation banquet of Henry V of England in the fourteenth
+            century enjoyed a dessert called cremefrez. By the seventeenth century, Charles I was served creme ice on a regular
+            basis. Eighteen-century English cookbooks contained recipes for ice cream flavored with apricots, violets, rose petals,
+            chocolate, and caramel. Other early flavorings included macaroon and rum. In early America, George Washington and Thomas
+            Jefferson were especially fond of ice cream. Dolley Madison was known to serve it at White House state dinners.
+            </p>
+
+            <p>
+                Because ice was expensive and refrigeration had not yet been invented, ice cream was still considered a treat for the
+            wealthy or for those in colder climates. (In a note written in 1794, Beethoven described the Austrians' fear that an
+            unseasonably warm winter would prevent them from enjoying ice cream.) Furthermore, the process of making ice cream was
+            cumbersome and time-consuming. A mixture of dairy products, eggs, and flavorings was poured into a pot and beaten while,
+            simultaneously, the pot was shaken up and down in a pan of salt and ice.
+            </p>
         </div>
+    </div>
 </div>
 <!-- Our locations -->
 
