feature/locations-modal

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -79,10 +79,10 @@
         </ul>
         <ul class="contacts__wrapper-btn">
            <li>
-               <button class="contacts__btn contacts__btn-location" type="button">Our Locations</button>
+               <button class="contacts__btn contacts__btn-location" type="button" data-modal-locations-open>Our Locations</button>
            </li>
            <li>
-                <button class="contacts__btn contacts__btn-franchise" type="button">Franchise</button>
+                <button class="contacts__btn contacts__btn-franchise" type="button" data-modal-locations-open-b>Franchise</button>
            </li>
         </ul>
 
