--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -30,9 +30,7 @@
     </div>
 </div>
 
-
-
-<!-- <h1>Hows made? -->
+<!-- How It`s made? -->
 <div class="backdrop backdrop--is-hidden" data-modal-about>
     <div class="modal modal--about">
         <button type="button" class="modal__btn--close modal__btn--about" data-modal-about-close>
@@ -70,35 +68,18 @@
         </div>
     </div>
 </div>
+
 <!-- Our locations -->
-
-<div class="backdrop is-hidden">
-        <div class="modal">
-            <button type="button" class="modal-btn-close">
-            <svg class="read-more__close-icon" width="18" height="18">
-                <use href="./images/sprite.svg#close"></use>
-            </svg>
-            </button>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d21329442.148878552!2d-94.58275336707379!3d39.09898706072556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0LPQvtGA0L7QtNCwINGB0YjQsA!5e0!3m2!1sru!2sua!4v1642339212445!5m2!1sru!2sua"
-                width="200" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            <h2 class="read-more__title title">Our store</h2>
-        </div>
-</div>
-
-<!-- fhanchise -->
-<div class="backdrop is-hidden">
-    <div class="modal">
-        <button type="button" class="modal-btn-close">
-            <svg class="read-more__close-icon" width="18" height="18">
+<div class="backdrop backdrop--is-hidden" data-modal-locations>
+    <div class="modal modal--locations">
+        <button type="button" class="modal__btn--close" data-modal-locations-close>
+            <svg width="18" height="18">
                 <use href="./images/sprite.svg#close"></use>
             </svg>
         </button>
-        
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d21329442.148878552!2d-94.58275336707379!3d39.09898706072556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0LPQvtGA0L7QtNCwINGB0YjQsA!5e0!3m2!1sru!2sua!4v1642339212445!5m2!1sru!2sua"
-        width="200" height="400" style="border:0;" allowfullscreen="" loading="lazy">
-    </iframe>            
-    <h2 class="modal__fhanchise-title title">We are in the cities</h2>
+        <h3 class=" modal__title modal__title--locations">Find <span>IceCream</span> here!</h3>
+            <iframe class="modal__map"
+                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d21329442.148878552!2d-94.58275336707379!3d39.09898706072556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0LPQvtGA0L7QtNCwINGB0YjQsA!5e0!3m2!1sru!2sua!4v1642339212445!5m2!1sru!2sua"
+                width="640" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
     </div>
 </div>
