--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -261,3 +261,58 @@
 //   align-items: center;
 //   justify-content: center;
 // }
+
+// Locations modal
+// --------------------------------------
+
+.modal--locations {
+  background-color: #c2e297;
+  width: 700px;
+  padding-top: 150px;
+  border: 0;
+  @media screen and (max-width: 767px) {
+    width: 300px;
+    height: 490px;
+    padding: 100px 20px 20px 20px;
+    transform: translate(-50%, 34%) scale(1);
+  }
+
+  &::before {
+    background-image: url(../images/desktop/d-prod-shake@1x.png);
+    @media screen and (max-width: 767px) {
+      width: 250px;
+      height: 250px;
+      top: -165px;
+      left: 25px;
+    }
+  }
+}
+
+.modal__map {
+  width: 100%;
+  height: 350px;
+  margin: 0 auto;
+  border-radius: 20px;
+  margin-top: 30px;
+  -webkit-box-shadow: 0px 0px 20px -10px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0px 0px 20px -10px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 0px 20px -10px rgba(0, 0, 0, 0.8);
+  @media screen and (max-width: 767px) {
+    height: 330px;
+    margin-top: 20px;
+  }
+}
+.modal__title--locations {
+  margin: 0 auto;
+  width: 85%;
+  font-size: 40px;
+  color: $text-two;
+  border-radius: 20px;
+  & span {
+    color: $text-accent;
+  }
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    font-size: 21px;
+  }
+}
