--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -170,8 +170,6 @@
 }
 
 .overlay__text {
-  overflow: scroll;
-  padding: 0 40px;
   @media screen and (min-width: $tablet) {
     padding: 0 12px;
   }
@@ -191,10 +189,23 @@
   height: 295px;
   padding: 0 40px;
   border-radius: 24px;
-  overflow: scroll;
+  overflow-y: scroll;
   z-index: 1;
   transform: rotate3d(0, 1, 0, 360deg);
   transition: transform $switch;
+  @media screen and (min-width: $tablet) {
+    padding: 0;
+  }
+  @media screen and (min-width: $desktop) {
+    &::-webkit-scrollbar {
+      width: 5px;
+      background-color: transparent;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(255, 255, 255, 0.4);
+      border-radius: 4px;
+    }
+  }
 }
 
 .overlay--a {
