--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,7 @@
 <!--------------------Section Customers Reviews------------------->
 <section class="reviews__section" id="reviews">
+<h2 class="reviews__title visually-hidden">Customers Reviews</h2>
+<article class="customers-reviews">
 <div class="wrapper container">
         <div class="swiper mySwiper">
             <div class="slider swiper-wrapper">
@@ -112,4 +114,5 @@
         </div>
     
 </div>
+</article>
 </section>
