fix buttons in hero

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -58,8 +58,10 @@
                 Made With</br>
                 <span class="hero__title--accent">Passion</span>
         </h1>
-        <a class="nav-link hero__link hero__link--red" data-goto=".products" href="">Products</a>
-        <a class="nav-link hero__link " data-goto=".about" href="">How it's made</a>
+        <ul class="hero__button__list">
+        <li class="hero__button__item"><a class="nav-link hero__link hero__link--red" data-goto=".products" href="">Products</a></li>
+        <li class="hero__button__item"><a class="nav-link hero__link " data-goto=".about" href="">How it's made</a></li>
+        </ul>
         <div class="hero__text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
             <a href="" class="arrow">
