--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -189,7 +189,8 @@
   height: 295px;
   padding: 0 40px;
   border-radius: 24px;
-  overflow-y: scroll;
+  overflow: scroll;
+
   z-index: 1;
   transform: rotate3d(0, 1, 0, 360deg);
   transition: transform $switch;
@@ -197,6 +198,7 @@
     padding: 0;
   }
   @media screen and (min-width: $desktop) {
+    overflow-y: scroll;
     &::-webkit-scrollbar {
       width: 5px;
       background-color: transparent;
@@ -305,7 +307,7 @@
   position: absolute;
   left: 137px;
   top: 208px;
-  // display: block;
+  display: block;
   width: 6px;
   height: 6px;
   border-radius: 50%;
