--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,28 +1,26 @@
 <section class="advantages" id="advantages">
-  <div class="advantages-container">
-    <div class="container">
-      <h1 class="visually-hidden">Advantages</h1>
-      <ul class="advantages-row">
-        <li class="advantages__item">
-          <h3 class="advantages__title title">721</h3>
-          <p class="advantages__text">
-            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-          </p>
-        </li>
-        <li class="advantages__item">
-          <h3 class="advantages__title title">16kg</h3>
-          <p class="advantages__text">
-            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-          </p>
-        </li>
+  <div class="container advantages__container">
+    <h2 class="visually-hidden">Advantages</h2>
+    <ul class="advantages-row">
+      <li class="advantages__item">
+        <h3 class="advantages__title title">721</h3>
+        <p class="advantages__text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+      <li class="advantages__item">
+        <h3 class="advantages__title title">16kg</h3>
+        <p class="advantages__text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
 
-        <li class="advantages__item">
-          <h3 class="advantages__title title">84</h3>
-          <p class="advantages__text">
-            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-          </p>
-        </li>
-      </ul>
-    </div>
+      <li class="advantages__item">
+        <h3 class="advantages__title title">84</h3>
+        <p class="advantages__text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+    </ul>
   </div>
 </section>
