--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,76 +1,69 @@
-.gallery{
-    padding-bottom: 40px;
-    background: linear-gradient(to bottom, $bg-two 48px,
-    $bg-one 48px);
-    @media screen and (min-width: 768px) {
-        padding-bottom: 60px;
-        background-image: linear-gradient(
-        to bottom,
-        $bg-two 107px,
-        $bg-one 107px
-    ); }
-@media screen and (min-width: 1200px) {
-    background-image: linear-gradient(
-        to bottom,
-        $bg-two 171px,
-        $bg-one 171px);
-} 
+.gallery {
+  padding: 50px 0 40px 0;
+  background: linear-gradient(to bottom, $bg-two 100px, $bg-one 100px);
+  @media screen and (min-width: 768px) {
+    padding: 70px 0 60px 0;
+    background-image: linear-gradient(to bottom, $bg-two 175px, $bg-one 175px);
+  }
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(to bottom, $bg-two 240px, $bg-one 240px);
+  }
 }
 
-.gallery__items{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.gallery__items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.gallery__item{
-margin-right: 6px;
+.gallery__item {
+  margin-right: 6px;
 }
 
-.gallery__img{
-    display: block;
-    object-fit: cover;
-    width: 35px;
-    height: 35px;
-    margin-bottom: 6px;
-    border-radius: 6px;
-    @media screen and (min-width: 768px) {
-        width: 86px;
-        height: 86px;   
-    }
-    @media screen and (min-width: 1200px) {
-        width: 139px;
-        height: 139px;  
-}
-}
-
-.gallery__img_big{
-    display: block;
-    object-fit: cover;
-    width: 76px;
-    height: 76px;
-    margin-bottom: 6px;
-    border-radius: 6px;
-    @media screen and (min-width: 768px) {
-        width: 172px;
-        height: 172px;   
-    }
-    @media screen and (min-width: 1200px) {
-        width: 282px;
-        height: 282px;  
-}
+.gallery__img {
+  display: block;
+  object-fit: cover;
+  width: 35px;
+  height: 35px;
+  margin-bottom: 6px;
+  border-radius: 6px;
+  @media screen and (min-width: 768px) {
+    width: 86px;
+    height: 86px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 139px;
+    height: 139px;
+  }
 }
 
-.gallery__img_5{
-    margin-bottom: 0;
+.gallery__img_big {
+  display: block;
+  object-fit: cover;
+  width: 76px;
+  height: 76px;
+  margin-bottom: 6px;
+  border-radius: 6px;
+  @media screen and (min-width: 768px) {
+    width: 172px;
+    height: 172px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 282px;
+    height: 282px;
+  }
 }
 
-.gallery__item_top{
-    margin-bottom: 19px;
-    @media screen and (min-width: 768px) {
-        margin-bottom: 59px; 
-    }
-    @media screen and (min-width: 1200px) {
-        margin-bottom: 94px;
+.gallery__img_5 {
+  margin-bottom: 0;
 }
+
+.gallery__item_top {
+  margin-bottom: 19px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 59px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 94px;
+  }
 }
