deleted ul and li

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -18,29 +18,22 @@
             </picture>
             
             <div class="description">
-                <ul class="description__list list">
-                    <li class="description__item">
-                        <p class="description__text">
-                            Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget,
-                            egestas
-                            eros.
-                            Maecenas eleifend erat at justo fringilla.
-                        </p>
-                    </li>
-                    <li class="description__item">
-                        <p class="description__text text2">
-                            Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
-                            placerat.
-                            Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-                        </p>
-                    </li>
-                    <li class="description__item">
-                        <p class="description__text text2">
-                            Aliquam erat volutpat. Aenean accumsan.
-                        </p>
-                    </li>
-                </ul>
+                <p class="description__text">
+                    Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget,
+                    egestas
+                    eros.
+                    Maecenas eleifend erat at justo fringilla.
+                </p>
             
+                <p class="description__text desc__text2">
+                    Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
+                    placerat.
+                    Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
+                </p>
+            
+                <p class="description__text desc__text3">
+                    Aliquam erat volutpat. Aenean accumsan.
+                </p>
                 <button class="description__button" data-modal-about-open>
                     Read more
                     <img class="about-button__arrow" src="./images/common/vector_2.png" alt="arrow">
