--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -63,6 +63,7 @@
 
 .description {
   padding: 0 30px;
+  margin-top: 46px;
 
   @media screen and (min-width: 768px) {
     padding: 0;
@@ -74,44 +75,44 @@
   }
 }
 
-.description__list {
-  margin-bottom: 20px;
-  margin-top: 46px;
-  @media screen and (min-width: 768px) {
-    margin-bottom: 62px;
-    margin-top: 0;
-  }
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 45px;
-  }
-}
+// .description__list {
+//   margin-bottom: 20px;
+//   margin-top: 46px;
+//   @media screen and (min-width: 768px) {
+//     margin-bottom: 62px;
+//     // margin-top: 0;
+//   }
+//   @media screen and (min-width: 1200px) {
+//     margin-bottom: 45px;
+//   }
+// }
 
-.description__item {
-  &:not(:last-child) {
-    margin-bottom: 26px;
-  }
-  &:nth-child(2) {
-    margin-bottom: 10px;
-  }
+// .description__item {
+// &:not(:last-child) {
+//   // margin-bottom: 26px;
+// }
+// &:nth-child(2) {
+//   // margin-bottom: 10px;
+// }
 
-  @media screen and (min-width: 768px) {
-    &:not(:last-child) {
-      margin-bottom: 28px;
-    }
-    &:nth-child(2) {
-      margin-bottom: 30px;
-    }
-  }
+// @media screen and (min-width: 768px) {
+//   &:not(:last-child) {
+//     // margin-bottom: 28px;
+//   }
+//   &:nth-child(2) {
+//     margin-bottom: 30px;
+//   }
+// }
 
-  @media screen and (min-width: 1200px) {
-    &:not(:last-child) {
-      margin-bottom: 35px;
-    }
-    &:nth-child(2) {
-      margin-bottom: 40px;
-    }
-  }
-}
+//   @media screen and (min-width: 1200px) {
+//     &:not(:last-child) {
+//       // margin-bottom: 35px;
+//     }
+//     &:nth-child(2) {
+//       margin-bottom: 40px;
+//     }
+//   }
+// }
 
 .description__text {
   font-family: DM Sans;
@@ -121,26 +122,58 @@
   line-height: 1.62;
   color: $text-one;
 
+  margin-bottom: 26px;
+
   @media screen and (min-width: 768px) {
     font-size: 14px;
     line-height: 1.76;
     letter-spacing: 0.04em;
+
+    margin-bottom: 28px;
   }
   @media screen and (min-width: 1200px) {
     font-size: 16px;
     line-height: 1.75;
 
     letter-spacing: 0.04em;
+
+    margin-bottom: 35px;
   }
 }
 
-.text2 {
+.desc__text2 {
   color: $text-three;
   letter-spacing: 0.04em;
+
+  margin-bottom: 10px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
 
   @media screen and (min-width: 1200px) {
     font-size: 14px;
     line-height: 1.94;
+
+    margin-bottom: 40px;
+  }
+}
+
+.desc__text3 {
+  color: $text-three;
+  letter-spacing: 0.04em;
+
+  margin-bottom: 20px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 62px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.94;
+
+    margin-bottom: 45px;
   }
 }
 
