--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,9 +1,9 @@
 .about {
   padding-top: 125px;
-  padding-bottom: 39px;
+  padding-bottom: 20px;
   background-color: $bg-two;
   background-image: url(../images/mobile/m-about-milk@1x.png);
-  background-position: center 88%;
+  background-position: center 91%;
   background-repeat: no-repeat;
   background-size: contain;
 
@@ -13,15 +13,15 @@
 
   @media screen and (min-width: 768px) {
     padding-top: 130px;
-    padding-bottom: 66px;
+    padding-bottom: 33px;
     background-image: unset;
   }
 
   @media screen and (min-width: 1200px) {
     padding-top: 125px;
-    padding-bottom: 39px;
+    padding-bottom: 20px;
     background-image: url(../images/desktop/d-about-milk@1x.png);
-    background-position: center 108%;
+    background-position: center 115%;
   }
 
   @media screen and (min-width: 1200px) and (min-resolution: 192dpi) and (min-resolution: 2dppx) {
@@ -32,10 +32,10 @@
 .about__title {
   margin-bottom: 26px;
   @media screen and (min-width: 768px) {
-    margin-bottom: 0;
+    margin-bottom: 50px;
   }
   @media screen and (min-width: 1200px) {
-    margin-bottom: 0;
+    margin-bottom: 55px;
   }
 }
 
@@ -43,12 +43,6 @@
   position: relative;
   @media screen and (min-width: 768px) {
     display: flex;
-    margin-top: 50px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    display: flex;
-    margin-top: 55px;
   }
 }
 
@@ -62,57 +56,17 @@
 }
 
 .description {
-  padding: 0 30px;
-  margin-top: 46px;
+  padding: 46px 30px 0;
 
   @media screen and (min-width: 768px) {
     padding: 0;
-    margin-top: 50px;
+    padding-top: 50px;
   }
 
   @media screen and (min-width: 1200px) {
-    margin-top: 51px;
+    padding-top: 51px;
   }
 }
-
-// .description__list {
-//   margin-bottom: 20px;
-//   margin-top: 46px;
-//   @media screen and (min-width: 768px) {
-//     margin-bottom: 62px;
-//     // margin-top: 0;
-//   }
-//   @media screen and (min-width: 1200px) {
-//     margin-bottom: 45px;
-//   }
-// }
-
-// .description__item {
-// &:not(:last-child) {
-//   // margin-bottom: 26px;
-// }
-// &:nth-child(2) {
-//   // margin-bottom: 10px;
-// }
-
-// @media screen and (min-width: 768px) {
-//   &:not(:last-child) {
-//     // margin-bottom: 28px;
-//   }
-//   &:nth-child(2) {
-//     margin-bottom: 30px;
-//   }
-// }
-
-//   @media screen and (min-width: 1200px) {
-//     &:not(:last-child) {
-//       // margin-bottom: 35px;
-//     }
-//     &:nth-child(2) {
-//       margin-bottom: 40px;
-//     }
-//   }
-// }
 
 .description__text {
   font-family: DM Sans;
@@ -127,7 +81,6 @@
   @media screen and (min-width: 768px) {
     font-size: 14px;
     line-height: 1.76;
-    letter-spacing: 0.04em;
 
     margin-bottom: 28px;
   }
