Fixed tablet version + create desktop

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -3,9 +3,11 @@
         <h2 class="visually-hidden">Contacts</h2>
         <ul class="contacts__list">
             <li class="contacts__item">
-                <p class="contacts__place-name">cafe</p>
-                <p class="contacts__city">Chicago</p>
-                <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <div class="contacts__description">
+                    <p class="contacts__place-name">cafe</p>
+                    <p class="contacts__city">Chicago</p>
+                    <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
                 <ul class="contacts__schedule">
                     <li class="contacts__work">
                         <p class="contacts__works-days">Monday - Friday</p>
@@ -28,9 +30,11 @@
             </li>
 
             <li class="contacts__item">
-                <p class="contacts__place-name second">foodtruck</p>
-                <p class="contacts__city">Los Angeles</p>
-                <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <div class="contacts__description">
+                    <p class="contacts__place-name second">foodtruck</p>
+                    <p class="contacts__city">Los Angeles</p>
+                    <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
                 <ul class="contacts__schedule">
                     <li class="contacts__work">
                         <p class="contacts__works-days">Monday - Friday</p>
@@ -53,9 +57,11 @@
             </li>
 
             <li class="contacts__item">
-                <p class="contacts__place-name">cafe</p>
-                <p class="contacts__city">New York</p>
-                <p class="contacts__description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <div class="contacts__description">
+                    <p class="contacts__place-name">cafe</p>
+                    <p class="contacts__city">New York</p>
+                    <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
                 <ul class="contacts__schedule">
                     <li class="contacts__work">
                         <p class="contacts__works-days">Monday - Friday</p>
@@ -78,10 +84,10 @@
             </li>
         </ul>
         <ul class="contacts__wrapper-btn">
-           <li>
+           <li class="conacts-wrapper__item">
                <button class="contacts__btn contacts__btn-location" type="button" data-modal-locations-open>Our Locations</button>
            </li>
-           <li>
+           <li class="conacts-wrapper__item">
                 <button class="contacts__btn contacts__btn-franchise" type="button" data-modal-locations-open-b>Franchise</button>
            </li>
         </ul>
